# proto-lens

lens-labels/: lens-labels.cabal
proto-lens/: package.yaml  proto-lens.cabal
proto-lens-arbitrary/: package.yaml  proto-lens-arbitrary.cabal
proto-lens-arbitrary/src/Data/ProtoLens/: Arbitrary.hs
proto-lens-arbitrary/src/Data/ProtoLens/Vector/: Arbitrary.hs
proto-lens-benchmarks/: Setup.hs  proto-lens-benchmarks.cabal
proto-lens-benchmarks/benchmarks/: IntPacking.hs  Nested.hs  UnusedFields.hs
proto-lens-benchmarks/src/Data/ProtoLens/Vector/: BenchmarkUtil.hs
proto-lens-combinators/: Setup.hs  proto-lens-combinators.cabal
proto-lens-combinators/src/Data/ProtoLens/Vector/: Combinators.hs
proto-lens-combinators/tests/: combinators_test.hs
proto-lens-descriptors/: proto-lens-descriptors.cabal  proto-lens-vector-descriptors.cabal
proto-lens-descriptors/src/Proto/Google/Protobuf/Vector/: Descriptor.hs
proto-lens-descriptors/src/Proto/Google/Protobuf/Vector/Compiler/: Plugin.hs
proto-lens-descriptors/src/Proto/Vector/Google/Protobuf/: Descriptor.hs
proto-lens-descriptors/src/Proto/Vector/Google/Protobuf/Compiler/: Plugin.hs
proto-lens-optparse/: proto-lens-vector-optparse.cabal
proto-lens-optparse/src/Data/ProtoLens/Vector/: Optparse.hs
proto-lens-protobuf-types/: Setup.hs  proto-lens-protobuf-types.cabal  proto-lens-vector-protobuf-types.cabal
proto-lens-protobuf-types/src/Data/ProtoLens/Vector/: Any.hs
proto-lens-protoc/: package.yaml  proto-lens-protoc.cabal  proto-lens-vector-protoc.cabal
proto-lens-protoc/src/: protoc-gen-haskell.hs
proto-lens-protoc/src/Data/ProtoLens/Compiler/: Generate.hs
proto-lens-protoc/src/Data/ProtoLens/Vector/: Setup.hs
proto-lens-protoc/src/Data/ProtoLens/Vector/Compiler/: Combinators.hs  Definitions.hs  Generate.hs  Plugin.hs
proto-lens-tests/: package.yaml  proto-lens-tests.cabal  proto-lens-vector-tests.cabal
proto-lens-tests-dep/: Setup.hs  proto-lens-vector-tests-dep.cabal
proto-lens-tests/src/Data/ProtoLens/Vector/: TestUtil.hs
proto-lens-tests/tests/: any_test.hs  canonical_test.hs  enum_test.hs  group_test.hs  labels_test.hs  map_test.hs  memory_test.hs  names_test.hs  no_package_test.hs  oneof_test.hs  optional_test.hs  package-deps_test.hs  packed_test.hs  proto3_test.hs  raw_fields_test.hs  repeated_test.hs  required_test.hs  text_format_test.hs
proto-lens/src/Data/ProtoLens/: Encoding.hs  Message.hs  TextFormat.hs  Vector.hs
proto-lens/src/Data/ProtoLens/Vector/: Encoding.hs  Message.hs  TextFormat.hs
proto-lens/src/Data/ProtoLens/Vector/Encoding/: Bytes.hs  Wire.hs
proto-lens/src/Data/ProtoLens/Vector/Message/: Enum.hs
proto-lens/src/Data/ProtoLens/Vector/TextFormat/: Parser.hs
