name:                proto-lens-vector-benchmarks
version:             0.1.0.0
synopsis:            Benchmarks for proto-lens-vector
description:
    This package contains a set of benchmarks for proto-lens-vector.
homepage:            https://github.com/google/proto-lens-vector
license:             BSD3
license-file:        LICENSE
author:              Aden Grue
maintainer:          agrue+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  benchmarks/*.proto

custom-setup
  setup-depends: base >= 4.8 && < 4.11
               , Cabal
               , proto-lens-vector-protoc == 0.2.*

library
  hs-source-dirs: src
  exposed-modules:     Data.ProtoLens.Vector.BenchmarkUtil
  default-language: Haskell2010
  build-depends: proto-lens-vector == 0.2.*
               , proto-lens-vector-protoc == 0.2.*
               , base >= 4.8 && < 4.11
               , bytestring == 0.10.*
               , criterion >= 1.1 && < 1.3
               , deepseq == 1.4.*
               , optparse-applicative >= 0.12 && < 0.15

-- The build-depends in the benchmarks don't specify version bounds, since
-- those are already constrained by the library rule.

Benchmark int-packing
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          IntPacking.hs
    hs-source-dirs:   benchmarks
    other-modules:    Proto.IntPacking
    ghc-options:      -O2 -rtsopts
    build-depends: base
                 , criterion
                 , deepseq
                 , lens-family-core
                 , proto-lens-vector
                 , proto-lens-vector-benchmarks
                 , proto-lens-vector-protoc

Benchmark nested
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Nested.hs
    hs-source-dirs:   benchmarks
    other-modules:    Proto.Nested
    ghc-options:      -O2 -rtsopts
    build-depends: base
                 , criterion
                 , deepseq
                 , lens-family-core
                 , proto-lens-vector
                 , proto-lens-vector-benchmarks
                 , proto-lens-vector-protoc
                 , text

Benchmark unused-fields
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          UnusedFields.hs
    hs-source-dirs:   benchmarks
    other-modules:    Proto.UnusedFields
    ghc-options:      -O2 -rtsopts
    build-depends: base
                 , criterion
                 , deepseq
                 , lens-family
                 , proto-lens-vector
                 , proto-lens-vector-benchmarks
                 , proto-lens-vector-protoc
