name:                proto-lens-vector-protoc
version:             0.2.2.3
synopsis:            Protocol buffer compiler for the proto-lens-vector library.
description:
  Turn protocol buffer files (.proto) into Haskell files (.hs) which
  can be used with the proto-lens-vector package.

  The library component of this package contains compiler code (namely
  Data.ProtoLens.Vector.Compiler.*) that is not guaranteed to have stable APIs.
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          proto-lens-vector@googlegroups.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.21
extra-source-files:  Changelog.md

-- Work around stack bug, since we don't want to build the library
-- during bootstrapping:
-- https://github.com/commercialhaskell/stack/issues/1406
flag only-executable
    Description: Only build the executable.  Used for bootstrapping.
    Default: False

library
  if flag(only-executable) {
      buildable: False
  } else {
    exposed-modules:
        Data.ProtoLens.Vector.Compiler.Combinators
        Data.ProtoLens.Vector.Compiler.Definitions
        Data.ProtoLens.Vector.Compiler.Generate
        Data.ProtoLens.Vector.Compiler.Plugin
        Data.ProtoLens.Vector.Setup
    default-language:  Haskell2010
    hs-source-dirs:    src
    build-depends:
          Cabal >= 1.22 && < 2.1
        , base >= 4.8 && < 4.11
        , bytestring == 0.10.*
        , containers == 0.5.*
        , data-default-class >= 0.0 && < 0.2
        , directory >= 1.2 && < 1.4
        , filepath >= 1.4 && < 1.6
        , haskell-src-exts >= 1.17 && < 1.20
        , lens-family == 1.2.*
        , lens-labels == 0.1.*
        , process >= 1.2 && < 1.7
        -- Specify a more precise version of `proto-lens-vector`, since it depends on
        -- the exact definition of the Message class.
        , proto-lens-vector == 0.2.2.*
        , proto-lens-vector-descriptors == 0.2.2.*
        , text == 1.2.*
        , vector == 0.12.*
    reexported-modules:
        -- Modules that are needed by the generated Haskell files.
        -- For forwards compatibility, reexport them as new module names so that
        -- other packages don't accidentally write non-generated code that
        -- relies on these modules being reexported by proto-lens-vector-protoc.
          Prelude as Data.ProtoLens.Vector.Reexport.Prelude
        , Data.Int as Data.ProtoLens.Vector.Reexport.Data.Int
        , Data.Word as Data.ProtoLens.Vector.Reexport.Data.Word
        , Data.ByteString as Data.ProtoLens.Vector.Reexport.Data.ByteString
        , Data.Default.Class as Data.ProtoLens.Vector.Reexport.Data.Default.Class
        , Data.Map as Data.ProtoLens.Vector.Reexport.Data.Map
        , Data.ProtoLens.Vector as Data.ProtoLens.Vector.Reexport.Data.ProtoLens.Vector
        , Data.ProtoLens.Vector.Message.Enum as Data.ProtoLens.Vector.Reexport.Data.ProtoLens.Vector.Message.Enum
        , Data.Text as Data.ProtoLens.Vector.Reexport.Data.Text
        , Lens.Family2 as Data.ProtoLens.Vector.Reexport.Lens.Family2
        , Lens.Family2.Unchecked as Data.ProtoLens.Vector.Reexport.Lens.Family2.Unchecked
        , Lens.Labels as Data.ProtoLens.Vector.Reexport.Lens.Labels
        , Data.Vector as Data.ProtoLens.Vector.Reexport.Data.Vector
    }

executable proto-lens-vector-protoc
  main-is:  protoc-gen-haskell.hs

  build-depends:
        base >= 4.8 && < 4.11
      , bytestring == 0.10.*
      , containers == 0.5.*
      , data-default-class >= 0.0 && < 0.2
      , filepath >= 1.4 && < 1.6
      , haskell-src-exts >= 1.17 && < 1.20
      , lens-family == 1.2.*
      -- Specify a more precise version of `proto-lens-vector`, since it depends on
      -- the exact definition of the Message class.
      , proto-lens-vector == 0.2.2.*
      , proto-lens-vector-descriptors == 0.2.2.*
      , text == 1.2.*
  hs-source-dirs:      src
  other-modules:
      Data.ProtoLens.Vector.Compiler.Combinators
      Data.ProtoLens.Vector.Compiler.Definitions
      Data.ProtoLens.Vector.Compiler.Generate
      Data.ProtoLens.Vector.Compiler.Plugin

  default-language:    Haskell2010
