name:                proto-lens-vector
version:             0.2.2.0
synopsis:            A lens-based implementation of protocol buffers in Haskell.
description:
  The proto-lens-vector library provides to protocol buffers using modern
  Haskell language and library patterns.  Specifically, it provides:
  .
  * Composable field accessors via lenses
  .
  * Simple field name resolution/overloading via type-level literals
  .
  * Type-safe reflection and encoding/decoding of messages via GADTs

homepage:            https://github.com/google/proto-lens-vector
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          proto-lens-vector@googlegroups.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  Changelog.md

library
  hs-source-dirs: src
  exposed-modules:     Data.ProtoLens.Vector
                       Data.ProtoLens.Vector.Encoding
                       Data.ProtoLens.Vector.Message
                       Data.ProtoLens.Vector.Message.Enum
                       Data.ProtoLens.Vector.TextFormat
  other-modules:       Data.ProtoLens.Vector.Encoding.Bytes
                       Data.ProtoLens.Vector.Encoding.Wire
                       Data.ProtoLens.Vector.TextFormat.Parser
  build-depends:  attoparsec == 0.13.*
                , base >= 4.8 && < 4.11
                , bytestring == 0.10.*
                , containers == 0.5.*
                , data-default-class >= 0.0 && < 0.2
                , lens-family == 1.2.*
                , parsec == 3.1.*
                , pretty == 1.1.*
                , text == 1.2.*
                , transformers >= 0.4 && < 0.6
                , vector == 0.12.*
                , void == 0.7.*
